hw15: product handler
